# xapcppcore-audioio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/xap/audioio/: all.h  device.h  error.h  player.h  recorder.h  version.h
src/: CMakeLists.txt  device.cc  error.cc  error_p.h  player.cc  player_p.h  recorder.cc  recorder_p.h
test/: CMakeLists.txt  common.h  device.unittest.cc  recorder_player.unittest.cc
